# conan-cmake-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
docs/: project_setup.md  vscode_problems.md
include/: simple_mod.hpp
scripts/: README.md  cmake_build.py  cmake_config.py  conan_config_profiles.py  conan_install.py  patch_sdl2_image.py
src/: main.cpp  simple_mod.cpp
